--- a/moi.html
+++ b/moi.html
@@ -10,10 +10,10 @@
             <li ><a href="pageDaccueil.html"></a>Page d'accueil</li>
             <li class ="menu"><a href="projet_profesionnel_menu.html">Mes expériences professionelles</a>
                 <ul class="sousmenu">
-                    <li><a href="projets/Création_base_de_donnée.html">Création d'une base de donnée</a></li>
+                    <li><a href="projets/Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li><a href="projets/Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
                     <li><a href="projets/Comparaison_algorithmique.html">Comparaison algorithmique</a></li>
-                    <li><a href="projets/Exploitation_d'une_base.html">Exploitation d'une base de donnée</a></li>
+                    <li><a href="projets/Exploitation_d'une_base.html">Exploitation d'une base de données</a></li>
                     <li><a href="projets/installation_service_réseaux.html">Installation d'un serveur réseaux</a></li>
                 </ul>
             </li>
@@ -25,28 +25,27 @@
             <h1>Qui suis-je</h1>
             <section>
                 <img src="image\ma_tete.jpg" alt="ma_tête">
-                <p>Je m'appelle MICHEL eliot je suis étudiant en BUT informatique,
-                    j'ai eu mon BAC mention assez-bien et mon brevet mention tres bien,
-                    j'aspire à être dévellopeur logiciel/web dans le futur.
-                    Je suis quelqu'un de motiver et sociable, je pense qu'être sociable 
-                    est une réel qualiter dans le monde de l'informatique car on est vouée 
-                    à travailler et communiquer avec différente personne dans un projet ou en entreprise
-                    et les élément d'un groupe fonctionnent beaucoup mieux ensemble qu'isoler.<Br><br>
-                    Je peux vous accompagner tout au long de vos projet futur 
-                    grâce à mes maitrises en création et exploitation de base de donnée, 
-                    conception, modélisation et création de logiciel, création de page web et création de d'interface logiciel.
+                <p>Je m'appelle Eliot MICHEL. Je suis étudiant en BUT informatique,
+                    j'ai eu mon BAC mention assez bien et mon brevet mention très bien,
+                    j'aspire à être développeur logiciel/web dans le futur.
+                    Je suis quelqu'un de motivé et sociable. Je pense qu'être sociable 
+                    est une réelle qualité dans le monde de l'informatique car on est voué
+                    à travailler et communiquer avec différentes personnes pour un projet ou en entreprise.<Br><br>
+                    Je peux vous accompagner tout au long de vos projets futurs en me mettant à l'écoute de vos besoins et 
+                    grâce à mes maitrises en création et exploitation de base de données, 
+                    conception, modélisation et création de logiciels, de pages web et d'interfaces logiciel.
                 </p>
             </section>
 
         </div>
         <div class="passion">
             <h1>Mes passions</h1>
-            <p>je suis passioné de handball depuis mes 10 ans et c'est ce qui ma appris des valeurs comme le partage,
-                 la combativité ou bien le gout de l'effort. Il y a deux j'ai decider de m'investire plus dans mon club en devenant 
-                 coach d'une equipe de jeune ce qui ma appris à adapter mon language en fonction de mon public et 
-                  m'adapter en fonction de ce qu'il font. <br>
-                  Je suis aussi un grand fan de la culture web car j'ai grandi avec, les jeux video ,
-                  les dernier technologie ou bien même les évenements organiser sur internet.
+            <p>je suis passionné de handball depuis l'âge de mes 10 ans. Ce sport collectif m'a appris des valeurs comme la solidarité,
+                 la combativité et le goût de l'effort. Il y a deux ans, j'ai décidé de m'investir davantage dans mon club en devenant 
+                 coach d'une équipe de jeunes de moins de 13 ans. J'ai appris à adapter mon language en fonction de mon public et à
+                  m'adapter en fonction de ce qu'ils font. <br>
+                  Je suis aussi un grand fan de la culture web car j'ai grandi avec: les jeux vidéo,
+                  les dernières technologies ou bien même les évènements organisés sur internet.
             </p>
         </div>
         <div class="outil">
