--- a/pageDaccueil.html
+++ b/pageDaccueil.html
@@ -10,10 +10,10 @@
             <li class="actuel">Page d'accueil</li>
             <li class ="menu"><a href="projet_profesionnel_menu.html">Mes expériences professionelles</a>
                 <ul class="sousmenu">
-                    <li><a href="projets/Création_base_de_donnée.html">Création d'une base de donnée</a></li>
+                    <li><a href="projets/Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li><a href="projets/Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
                     <li><a href="projets/Comparaison_algorithmique.html">Comparaison algorithmique</a></li>
-                    <li><a href="projets/Exploitation_d'une_base.html">Exploitation d'une base de donnée</a></li>
+                    <li><a href="projets/Exploitation_d'une_base.html">Exploitation d'une base de données</a></li>
                     <li><a href="projets/installation_service_réseaux.html">Installation d'un serveur réseaux</a></li>
                 </ul>
             </li>
@@ -24,18 +24,18 @@
         
             
             <div class="acceuille">
-                <h1>Bonjour je suis un étudiant pour devenir dévellopeur informatique </h1>
+                <h1>Bonjour je suis un étudiant pour devenir développeur informatique </h1>
                 <p>Bienvenue sur mon portfolio<br>
                 Vous pouvez découvrir <a href="projet_profesionnel_menu.html">  mes différents projets </a>ou en apprendre un peu plus sur <a href="moi.html"> moi</a></p>
             </div>
 
 
             <div class="projets">
-                <h1>Quelque projets que j'ai effectuer</h1>
+                <h1>Quelque projets que j'ai réalisés</h1>
                 <section>
                     <div class="projet">
                         <img src="image/psql.png" alt="Psql">
-                        <a href="">Création d'une base de donnée</a>
+                        <a href="">Création d'une base de données</a>
                     </div>
                     <div class="projet">
                         <img src="image/java.png" alt="Java">
@@ -51,9 +51,9 @@
             </div>
             <div class="a_propos">
                 <h1>A propos </h1>
-                <p>Salut! Je m’appelle Michel Eliot, je suis un un étudiant en informatique qui s'intéresse de près au dévellopment de logiciel,
-                    je suis en 1er année de BUT informatique.<br>
-                    Pour chaque projet je met un point d'intêret à la conception en commençant par la définition du produit pour répondre au mieux 
+                <p>Salut! Je m’appelle Eliot MICHEL, je suis un étudiant en informatique qui s'intéresse de près au développement de logiciels,
+                    je suis en 1ère année de BUT informatique.<br>
+                    Pour chaque projet, je mets un point d'intêret à la conception en commençant par la définition du produit pour répondre au mieux 
                     aux besoins, en passant par la conception de la demande, l'intégration des pages et le développement des différentes fonctionnalités.
                     Je peux donc vous accompagner sur toutes les étapes de votre projet digital.</p>
             </div>
