--- a/projets/Comparaison_algorithmique.html
+++ b/projets/Comparaison_algorithmique.html
@@ -8,12 +8,12 @@
         <ul>
             <li class="logo"><img src="../image/logo.png" alt="logo"></li>
             <li><a href="../pageDaccueil.html">Page d'accueil</a></li>
-            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionelles</a>
+            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionnelles</a>
                 <ul class="sousmenu">
-                    <li><a href="Création_base_de_donnée.html">Création d'une base de donnée</a></li>
+                    <li><a href="Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li><a href="Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
                     <li class="actuel"><a class="actuel" href="Comparaison_algorithmique.html" >Comparaison algorithmique</a></li>
-                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de donnée</a></li>
+                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de données</a></li>
                     <li><a href="installation_service_réseaux.html">Installation d'un serveur réseaux</a></li>
                 </ul>
             </li>
@@ -26,9 +26,9 @@
             <section>
                 <img src="../image/trie.webp" alt="ma_tête">
                 <p>
-                    Ce projet s'effectuait par groupe de deux nous avions une grande base de donnée de article de journal 
-                    nous devions créer un algorithme qui permet de ttriée les articles en fonction de leur thème (sport, politique,économie, etc),
-                    puis nous devions essayer d'optimiser notre algorithme en temps puis de comparer les différent algorithme que nous avions crée.
+                    Ce projet s'effectuait par binôme. Nous avions une grande base de données d'articles de journaux. 
+                    Nous devions créer un algorithme qui permet de trier les articles en fonction de leur thème (sport, politique, économie, etc),
+                    puis nous devions essayer d'optimiser notre algorithme en temps puis de comparer les différents algorithmes que nous avions créés.
                 </p>
             </section>
 
