--- a/projets/Installation_poste_travaille.html
+++ b/projets/Installation_poste_travaille.html
@@ -10,10 +10,10 @@
             <li><a href="../pageDaccueil.html">Page d'accueil</a></li>
             <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionelles</a>
                 <ul class="sousmenu">
-                    <li><a href="Création_base_de_donnée.html">Création d'une base de donnée</a></li>
+                    <li><a href="Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li class="actuel"><a class="actuel" href="Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
                     <li><a href="Comparaison_algorithmique.html">Comparaison algorithmique</a></li>
-                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de donnée</a></li>
+                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de données</a></li>
                     <li ><ahref="installation_service_réseaux.html">Installation d'un serveur réseaux</a></li>
                 </ul>
             </li>
@@ -22,13 +22,13 @@
     </nav>
     <body>
         <div class="resume">
-            <h1>installation d'un poste de travail</h1>
+            <h1>Installation d'un poste de travail</h1>
             <section>
                 <img src="../image/debian.png" alt="debian">
                 <p>
                     Ce projet consistait à mettre en place le système d'exploitation DEBIAN sur une machine virtuelle 
-                    de sorte qu'il puissent être opérationel ce qui nécessité la configuration du systeme d'exploitation et 
-                    l'installation de package bonus tel que git, java, intellij.
+                    de sorte que le poste de travail puisse être opérationel, ce qui nécessitait la configuration du système d'exploitation et 
+                    l'installation de packages tels que git, java, intellij.
                 </p>
             </section>
 
