--- a/projets/installation_service_réseaux.html
+++ b/projets/installation_service_réseaux.html
@@ -8,12 +8,12 @@
         <ul>
             <li class="logo"><img src="../image/logo.png" alt="logo"></li>
             <li><a href="../pageDaccueil.html">Page d'accueil</a></li>
-            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionelles</a>
+            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionnelles</a>
                 <ul class="sousmenu">
-                    <li><a href="Création_base_de_donnée.html">Création d'une base de donnée</a></li>
+                    <li><a href="Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li><a href="Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
                     <li><a href="Comparaison_algorithmique.html">Comparaison algorithmique</a></li>
-                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de donnée</a></li>
+                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de données</a></li>
                     <li class="actuel"><a class="actuel" href="installation_service_réseaux.html">Installation d'un serveur réseaux</a></li>
                 </ul>
             </li>
@@ -22,14 +22,14 @@
     </nav>
     <body>
         <div class="resume">
-            <h1>installation_service_réseaux</h1>
+            <h1>Installation_service_réseaux</h1>
             <section>
                 <img src="../image/apache.png" alt="apache">
                 <p>
-                    Dans ce projet j'ai installer le systeme d'exploitation DEBIAN sur une machine virtuelle sans interface graphique,
-                    où j'ai installé une liaison SSH pour accéder au serveur sur le réseaux et PostgreSQL pour pouvoir géré des base de donnée
-                    ,un serveur apache disponible sur réseaux local où on peut accéder à un réseaux PHP et 
-                    PhpPgAdmin où on peut accéder aux bases de données
+                    Dans ce projet, j'ai installé le système d'exploitation DEBIAN sur une machine virtuelle sans interface graphique,
+                    sur laquelle j'ai installé une liaison SSH pour accéder au serveur sur le réseaux et PostgreSQL pour pouvoir gérer des bases de données
+                    , un serveur Apache disponible sur réseau local où on peut accéder à un réseaux PHP et un réseau
+                    PhpPgAdmin.
                 </p>
             </section>
 
