--- a/projets/Création_base_de_donnée.html
+++ b/projets/Création_base_de_donnée.html
@@ -8,12 +8,12 @@
         <ul>
             <li class="logo"><img src="../image/logo.png" alt="logo"></li>
             <li><a href="../pageDaccueil.html">Page d'accueil</a></li>
-            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionelles</a>
+            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionnelles</a>
                 <ul class="sousmenu">
-                    <li class="actuel"><a class="actuel" href="Création_base_de_donnée.html">Création d'une base de donnée</a></li>
+                    <li class="actuel"><a class="actuel" href="Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li><a href="Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
                     <li><a href="Comparaison_algorithmique.html">Comparaison algorithmique</a></li>
-                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de donnée</a></li>
+                    <li><a href="Exploitation_d'une_base.html">Exploitation d'une base de données</a></li>
                     <li><a href="installation_service_réseaux.html">Installation d'un serveur réseaux</a></li>
                 </ul>
             </li>
@@ -26,10 +26,10 @@
             <section>
                 <img src="../image/titanic.jpg" alt="ma_tête">
                 <p>
-                    Ce projet consistait à crée une base de donnée à partir de donnée venant du sauvetage du titanic,
-                    Donc j'ai du créer plusieur table de donnée que se soit les barques de sauvetages et leur emplacement sur le bateaux,
-                    les différent passagers et le positionnement de leur cabine ou encore 
-                    les passagers qui sont mort ou  ce qui ont été sauvé et leur temps de sauvetage.
+                    Ce projet s'effectuait en binôme et consistait à créer une base de données à partir de données venant du sauvetage du Titanic,
+                    Donc j'ai dû créer plusieurs tables de données que ce soit les barques de sauvetages et leurs emplacements sur le bateaux,
+                    les différents passagers et le positionnement de leur cabine ou encore 
+                    les passagers qui sont morts ou ceux qui ont été sauvés et leur temps de sauvetage.
                 </p>
             </section>
 
