ajout role et competence

--- a/moi.html
+++ b/moi.html
@@ -7,8 +7,8 @@
     <nav>
         <ul>
             <li class="logo"><img src="image/logo.png" alt="logo"></li>
-            <li ><a href="pageDaccueil.html"></a>Page d'accueil</li>
-            <li class ="menu"><a href="projet_profesionnel_menu.html">Mes expériences professionelles</a>
+            <li ><a href="pageDaccueil.html">Page d'accueil</a></li>
+            <li class ="menu"><a href="projet_profesionnel_menu.html">Mes expériences professionnelles</a>
                 <ul class="sousmenu">
                     <li><a href="projets/Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li><a href="projets/Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
@@ -22,10 +22,10 @@
     </nav>
     <body>
         <div class="Moi">
-            <h1>Qui suis-je</h1>
+            <h1>Qui suis-je ?</h1>
             <section>
                 <img src="image\ma_tete.jpg" alt="ma_tête">
-                <p>Je m'appelle Eliot MICHEL. Je suis étudiant en BUT informatique,
+                <p>Je m'appelle Eliot MICHEL. J'ai 19 ans et je suis étudiant en BUT informatique,
                     j'ai eu mon BAC mention assez bien et mon brevet mention très bien,
                     j'aspire à être développeur logiciel/web dans le futur.
                     Je suis quelqu'un de motivé et sociable. Je pense qu'être sociable 
