--- a/projets/Comparaison_algorithmique.html
+++ b/projets/Comparaison_algorithmique.html
@@ -33,7 +33,21 @@
             </section>
 
         </div>
-
+        <div class="role">
+            <h1>Mon rôle dans ce projet</h1>
+            <p>
+                Dans ce projet, j'ai créé les algorithmes et effectué la comparaison des algorithmes
+            </p>
+        </div>
+        <div class="competence">
+            <h1>Les compétences utilisées et apprises</h1>
+                <p>
+                    Durant ce projet, j'ai utilisé mes compétences avec le language JAVA pour créé les différent algorithmes
+                    mais je n'avait jamais comparé des algorythmes car je avait juste appris à  créer  des algorithmes.
+                    Donc j'ai appris à chronométré mes algorythme ainsi que les outillés 
+                    c'est à dire compter le nombre d'opération fait par l'algorithme.
+                </p> 
+        </div>
         
     </body>
 
