--- a/projets/Création_base_de_donnée.html
+++ b/projets/Création_base_de_donnée.html
@@ -22,7 +22,7 @@
     </nav>
     <body>
         <div class="resume">
-            <h1>Création d'une base de donnée</h1>
+            <h1>Création d'une base de données</h1>
             <section>
                 <img src="../image/titanic.jpg" alt="ma_tête">
                 <p>
@@ -34,7 +34,20 @@
             </section>
 
         </div>
-
+        <div class="role">
+            <h1>Mon rôle dans ce projet</h1>
+            <p>
+                Dans ce projet, j'ai créé des table contenant diverse information sur le titanic ainsi qu'une partit du compt rendu.
+            </p>
+        </div>
+        <div class="competence">
+            <h1>Les compétences utilisées et apprises</h1>
+                <p>
+                    Durant ce projet, j'ai utilisé mes compétences avec PostgreSQL pour créer une base de donnée
+                    mais j'ai beaucoup appris car je n'avais jamais créé autant de table 
+                    donc la cohérence des données était primordiale;
+                </p> 
+        </div>
         
     </body>
 
