--- a/projets/installation_service_réseaux.html
+++ b/projets/installation_service_réseaux.html
@@ -34,7 +34,23 @@
             </section>
 
         </div>
-
+        <div class="role">
+            <h1>Mon rôle dans ce projet</h1>
+            <p>
+                Dans ce projet, j'ai installer DEBIAN sur une machine virtuelle puis installer PostgreSQL ainsi qu'un serveur Apache 
+                ainsi qu'une page PhpPgAdmin sur le serveur apache directement connecté au base de donnée crée sur la machine virtuell
+                Puis j'ai rédigé un guide complet en anglais de  comment procéder pour installer un service de serveur.
+            </p>
+        </div>
+        <div class="competence">
+            <h1>Les compétences utilisées et apprises</h1>
+                <p>
+                    Durant ce projet, j'ai utilisé mes compétences avec PostgreSQL pour l'installer et créer une base de donnée
+                    ainsi qu'avec le système de commande (BASH) mais j'ai beaucoup appris sur les façons de créer 
+                    une liaison externe tel qu'une page PhpPgAdmin pouvant intéragir avec les bases présent sur la machine virtuelle 
+                    pouvant être accessible depuis un autre ordinateur du réseaux local.
+                </p> 
+        </div>
         
     </body>
 
