--- a/pageDaccueil.html
+++ b/pageDaccueil.html
@@ -8,7 +8,7 @@
         <ul>
             <li class="logo"><img src="image/logo.png" alt="logo"></li>
             <li class="actuel">Page d'accueil</li>
-            <li class ="menu"><a href="projet_profesionnel_menu.html">Mes expériences professionelles</a>
+            <li class ="menu"><a href="projet_profesionnel_menu.html">Mes expériences professionnelles</a>
                 <ul class="sousmenu">
                     <li><a href="projets/Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li><a href="projets/Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
