--- a/projets/Installation_poste_travaille.html
+++ b/projets/Installation_poste_travaille.html
@@ -8,7 +8,7 @@
         <ul>
             <li class="logo"><img src="../image/logo.png" alt="logo"></li>
             <li><a href="../pageDaccueil.html">Page d'accueil</a></li>
-            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionelles</a>
+            <li class="actuel" class ="menu"><a href="../projet_profesionnel_menu.html">Mes expériences professionnelles</a>
                 <ul class="sousmenu">
                     <li><a href="Création_base_de_donnée.html">Création d'une base de données</a></li>
                     <li class="actuel"><a class="actuel" href="Installation_poste_travaille.html">Installation d'un poste de travail</a></li>
@@ -32,6 +32,21 @@
                 </p>
             </section>
 
+        </div>
+        <div class="role">
+            <h1>Mon rôle dans ce projet</h1>
+            <p>
+                Dans ce projet, j'ai installer DEBIAN sur une machine virtuelle 
+                puis installer le logiciel git pour enregistrer au fur et à mesure nos fichier 
+                ensuite j'ai installer le package java pour pouvoir coder en java et enfin intellij pour avoir un IDE pour java
+            </p>
+        </div>
+        <div class="competence">
+            <h1>Les compétences utilisées et apprises</h1>
+                <p>
+                    Durant ce projet, j'ai utilisé mes compétences avec le système de commande (BASH) pour installer tout les packages nécesaire
+                    mais j'ai beaucoup appris sur les façons de créer un système debian sur une machine virtuelle.
+                </p> 
         </div>
 
         
