--- a/projet_profesionnel_menu.html
+++ b/projet_profesionnel_menu.html
@@ -65,8 +65,7 @@
                 </p>
             </div>
             <div class="footer-socials">
-                <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
-                <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+                <a href="https://github.com/micheleliot" target="_blank">GitHub</a>
             </div>
         </div>
     </div>
